--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,17 +1,19 @@
-<header>
-    <nav>
-        <a [routerLink]="['']">Home</a>
-        <a [routerLink]="['about']">About</a>
-    </nav>
-</header>
+<nav class="navbar navbar-light bg-faded navbar-static-top m-b-1">
+    <button class="navbar-toggler hidden-sm-up collapsed" type="button" data-toggle="collapse"
+            data-target="#navbar-header" aria-expanded="false">
+        ☰
+    </button>
+    <div class="navbar-toggleable-xs collapse" id="navbar-header" aria-expanded="false" style="height: 0px;">
+        <a class="navbar-brand" [routerLink]="['']">Navbar</a>
+        <ul class="nav navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" [routerLink]="['admin']">Home <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <main>
-    <h1>Hello from !</h1>
-
-    <!-- Images (and assets) are parsed and loaded from within the public directory -->
-    <img src="/img/angular.png">
-
     <router-outlet></router-outlet>
 </main>
 <footer>
-    <a [href]="url">Webpack Angular 2 Starter</a>
 </footer>
